--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -68,6 +68,13 @@ padding:0 30px;
 border-bottom: none;
 }
 
+/* button functionality with the bottom border */
+.header__option--active > .MuiSvgIcon-root{
+    color:#2e81f4;
+}
+.header__option--active{
+    border-bottom: 4px solid #2e81f4;
+}
 
 .header__info{
     display: flex;
